[package]
name = "m4rs"
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Trading indicator library supporting SMA, EMA, BolingerBand, MACD, RSI, Stochastics, Ichimoku, and more"
homepage = "https://github.com/00x4/m4rs/"
readme = "README.md"
repository = "https://github.com/00x4/m4rs"
categories = ["finance"]
keywords = ["finance", "trading", "indicators", "charts", "stock"]
